--- a/front-end/src/app/pages/employee/efetuar-manutencao/efetuar-manutencao.component.css
+++ b/front-end/src/app/pages/employee/efetuar-manutencao/efetuar-manutencao.component.css
@@ -7,7 +7,7 @@
 }
 
 #container {
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 p {
@@ -153,4 +153,89 @@ select.classic:focus {
 select:-moz-focusring {
   color: transparent;
   text-shadow: 0 0 0 #000;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.modal-content div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-content h2,
+.close-button {
+  font-size: 1.5rem;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.close-button {
+  font-size: 1.5rem;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.buttons {
+  height: 2.5rem;
+  border-radius: 0.5rem;
+  background: linear-gradient(135deg, orange, red);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.modal-content input {
+  padding: 0.5rem;
+  font-size: 1rem;
+  width: 200px;
+  margin-right: 1rem;
+  width: 40%;
+  border-radius: 0.5rem;
+  width: 100%;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 }
