--- a/front-end/src/app/pages/login/password-request/password-request.component.css
+++ b/front-end/src/app/pages/login/password-request/password-request.component.css
@@ -1,4 +1,4 @@
-* {
+.success-message {
   border: 0;
   margin: 0;
   padding: 0;
@@ -189,3 +189,22 @@ a {
   text-decoration: none;
   color: #fff;
 }
+
+label {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.email-message {
+  color: #353535;
+  background-color: #ffffff;
+  border: 1px solid #9c9c9c;
+  padding: 10px;
+  border-radius: 4px;
+  margin-top: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
+
