--- a/front-end/src/app/pages/customer/payment/payment.component.html
+++ b/front-end/src/app/pages/customer/payment/payment.component.html
@@ -51,24 +51,37 @@
                         <p>{{servico?.orientacaoCliente}}</p>
                     </div>
                 </div>
-                
-                
 
                 <h3 id="title-lista-historico">Histórico da Solicitação:</h3>
                 <div id="lista-historico">
                     <ul>
                         <li *ngIf="servico?.dataCriacao">Criação: {{servico?.dataCriacao}}</li>
-                        <li *ngIf="budget?.precoOrcado">Orçamento: {{budget?.dataOrcamento}} - {{budget?.precoOrcado}} - {{servico?.nomeFuncionario ?? "Ainda não definido"}}</li>
-                        <li *ngIf="budget?.dataRecuperacao">Recuperação: {{budget?.dataRecuperacao}} - {{servico?.nomeFuncionario ?? "Ainda não definido"}}</li>
-                        <li *ngIf="servico?.dataConserto">Conserto: {{servico?.dataConserto}} - {{servico?.nomeFuncionario ?? "Ainda não definido"}}</li>
-                        <li *ngIf="servico?.dataFinalizacao">Finalização: {{servico?.dataFinalizacao}} - {{servico?.nomeFuncionario ?? "Ainda não definido"}}</li>
-                        <li *ngIf="budget?.dataRejeicao">Rejeição: {{budget?.dataRejeicao}} - {{servico?.nomeFuncionario ?? "Ainda não definido"}}</li>
+                        <li *ngIf="budget?.precoOrcado">Orçamento: {{budget?.dataOrcamento}} - {{budget?.precoOrcado}} -
+                            {{servico?.nomeFuncionario ?? "Ainda não definido"}}</li>
+                        <li *ngIf="budget?.dataRecuperacao">Recuperação: {{budget?.dataRecuperacao}} -
+                            {{servico?.nomeFuncionario ?? "Ainda não definido"}}</li>
+                        <li *ngIf="servico?.dataConserto">Conserto: {{servico?.dataConserto}} -
+                            {{servico?.nomeFuncionario ?? "Ainda não definido"}}</li>
+                        <li *ngIf="servico?.dataFinalizacao">Finalização: {{servico?.dataFinalizacao}} -
+                            {{servico?.nomeFuncionario ?? "Ainda não definido"}}</li>
+                        <li *ngIf="budget?.dataRejeicao">Rejeição: {{budget?.dataRejeicao}} - {{servico?.nomeFuncionario
+                            ?? "Ainda não definido"}}</li>
                     </ul>
                 </div>
             </div>
 
-            <button (click)="efetuarPagamento()">Pagar</button>
+            <button (click)="openPaymentModal()">Pagar</button>
             <button onclick="history.back()">Voltar</button>
         </div>
     </main>
+    <div *ngIf="paymentModal" id="payment-modal" class="modal" (click)="closePaymentModal()">
+        <div class="modal-content" (click)="$event.stopPropagation()">
+            <div>
+                <h2>Deseja PAGAR o valor de R${{servico?.valorConserto}}?</h2>
+                <span class="close-button" (click)="closePaymentModal()">&times;</span>
+            </div>
+            <button (click)="efetuarPagamento()" class="buttons">Pagar</button>
+            <button (click)="closePaymentModal()" class="buttons">Cancelar</button>
+        </div>
+    </div>
 </div>
