--- a/front-end/src/app/pages/customer/view-solicitacao/view-solicitacao.component.css
+++ b/front-end/src/app/pages/customer/view-solicitacao/view-solicitacao.component.css
@@ -104,3 +104,14 @@ main {
     display: flex;
     justify-content: space-between;
 }
+
+.alerta-manutencao {
+  color: #856404;
+  background-color: #fff3cd;
+  border: 1px solid #ffeeba; 
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
