--- a/front-end/src/app/pages/customer/view-solicitacao/view-solicitacao.component.html
+++ b/front-end/src/app/pages/customer/view-solicitacao/view-solicitacao.component.html
@@ -33,6 +33,11 @@
 
                 <!-- Outras informações (invisível inicialmente) -->
                 <div id="outras-informacoes" *ngIf="!mostrarInformacoesAtuais">
+
+                  <div *ngIf="!servico?.descricaoConserto && !servico?.orientacaoCliente" class="alerta-manutencao">
+                    Manutenção ainda não realizada.
+                </div>
+
                     <div class="linha-dupla">
                         <div class="item-orcamento">
                             <h3>Status Atual:</h3>
@@ -52,8 +57,8 @@
                         <p>{{servico?.orientacaoCliente}}</p>
                     </div>
                 </div>
-                
-                
+
+
 
                 <h3 id="title-lista-historico">Histórico da Solicitação:</h3>
                 <div id="lista-historico">
