--- a/front-end/src/app/pages/employee/visualizacao-solicitacoes/visualizacao-solicitacoes.component.css
+++ b/front-end/src/app/pages/employee/visualizacao-solicitacoes/visualizacao-solicitacoes.component.css
@@ -283,3 +283,13 @@ button:active {
   width: 100%;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 }
+
+.fas.fa-arrow-up,
+.fas.fa-arrow-down {
+  margin-left: 5px;
+  font-size: 0.8rem;
+}
+
+th i {
+  color: white; 
+}
